fix css import on SearchResults.jsx and star alignment for reviews

--- a/application/tutor-app/src/components/searchResults/searchResults.scss
+++ b/application/tutor-app/src/components/searchResults/searchResults.scss
@@ -162,3 +162,12 @@
 .top-tutors-container.results-container {
     height: 25%;
 }
+
+.rating {
+  display: inline-flex;
+  align-items: center;
+}
+
+.rating > svg {
+  height: 1em;
+}
